--- a/client2/src/components/featured/featured.scss
+++ b/client2/src/components/featured/featured.scss
@@ -19,6 +19,12 @@
       position: absolute;
       bottom: 20px;
       left: 20px;
+      h1 {
+        font-size: 20px;
+      }
+      h2 {
+        font-size: 16px;
+      }
     }
   }
 }
