--- a/client2/src/pages/hotel/hotel.scss
+++ b/client2/src/pages/hotel/hotel.scss
@@ -4,12 +4,13 @@
   align-items: center;
   margin-top: 20px;
   .slider {
-    position: sticky;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba($color: #000000, $alpha: 0.5);
+    background-color: #fff;
+    // background-color: rgba($color: #000000, $alpha: 0.8);
     z-index: 999;
     display: flex;
     align-items: center;
@@ -35,8 +36,8 @@
       justify-content: center;
       align-items: center;
       .sliderImg {
-        width: 80%;
-        height: 80vh;
+        width: 100%;
+        // height: 80vh;
       }
     }
   }
@@ -83,6 +84,7 @@
       justify-content: space-between;
       .hotelImgWrapper {
         width: 33%;
+        cursor: pointer;
         .hotelImg {
           width: 100%;
           object-fit: cover;
